force-app/main/default/objects/CB_Product_Mapping__c/CB_Product_Mapping__c.object-meta.xml
<CustomObject>
    <label>CB Product Mapping</label>
    <nameField>
        <displayFormat>CBM-{0000}</displayFormat>
        <label>CB Product Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CB Product Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>