force-app/main/default/objects/CB_Product_Mapping__c/fields/CB_Item_Price__c.field-meta.xml
<CustomField>
    <fullName>CB_Item_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CB Item Price</label>
    <referenceTo>chargebeeapps__CB_Item_Price__c</referenceTo>
    <relationshipLabel>CB Product Mappings</relationshipLabel>
    <relationshipName>CB_Product_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>