force-app/main/default/objects/CB_Product_Mapping__c/fields/New_Product__c.field-meta.xml
<CustomField>
    <fullName>New_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>CB Product Mappings (New Product)</relationshipLabel>
    <relationshipName>CB_Product_Mappings1</relationshipName>
    <type>Lookup</type>
</CustomField>