force-app/main/default/objects/CB_Product_Mapping__c/fields/New_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>New_Product_Code__c</fullName>
    <label>New Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>