force-app/main/default/objects/CB_Product_Mapping__c/fields/New_Product_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>New_Product_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Product Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>CB Product Mappings</relationshipLabel>
    <relationshipName>CB_Product_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>