force-app/main/default/objects/CB_Product_Mapping__c/fields/New_Product_PricebookEntry__c.field-meta.xml
<CustomField>
    <fullName>New_Product_PricebookEntry__c</fullName>
    <label>New Product PricebookEntry</label>
    <length>18</length>
    <type>Text</type>
</CustomField>