force-app/main/default/objects/CB_Product_Mapping__c/fields/Old_Product__c.field-meta.xml
<CustomField>
    <fullName>Old_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>CB Product Mappings</relationshipLabel>
    <relationshipName>CB_Product_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>