force-app/main/default/objects/CB_Product_Mapping__c/fields/Old_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Old_Product_Code__c</fullName>
    <label>Old Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>