force-app/main/default/objects/CB_Product_Mapping__c/fields/Old_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Product_Id__c</fullName>
    <label>Old Product Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>