force-app/main/default/objects/CB_Product_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>New_Product__c</columns>
    <columns>New_Product_Code__c</columns>
    <columns>New_Product_PricebookEntry__c</columns>
    <columns>Old_Product__c</columns>
    <columns>Old_Product_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>